# pangolin

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bins/opc/: Cargo.toml
bins/opc-gui/: Cargo.toml
bins/opc-gui/src/: main.rs  opc.rs  theme.rs  tray.rs  views.rs
bins/opc-tray/: Cargo.toml
bins/opc-tray/src/: icons.rs  main.rs  opc.rs
bins/opc/src/: main.rs  metrics.rs
bins/pgn/: Cargo.toml
bins/pgn-auth-helper/: Cargo.toml
bins/pgn-auth-helper/src/: main.rs
bins/pgn-tray/: Cargo.toml
bins/pgn-tray/src/: main.rs  pgn.rs
bins/pgn/src/: main.rs  metrics.rs
crates/gp-auth/: Cargo.toml
crates/gp-auth/src/: client.rs  context.rs  error.rs  hip.rs  lib.rs  okta.rs  password.rs  saml_common.rs  saml_paste.rs  saml_webview.rs
crates/gp-config/: Cargo.toml
crates/gp-config/src/: lib.rs
crates/gp-dns/: Cargo.toml
crates/gp-dns/src/: lib.rs
crates/gp-hip/: Cargo.toml
crates/gp-hip/src/: lib.rs
crates/gp-ipc/: Cargo.toml
crates/gp-ipc/src/: lib.rs
crates/gp-ipc/tests/: roundtrip.rs
crates/gp-openconnect-sys/: Cargo.toml  build.rs  wrapper.h
crates/gp-openconnect-sys/csrc/: progress_shim.c
crates/gp-openconnect-sys/src/: lib.rs
crates/gp-proto/: Cargo.toml
crates/gp-proto/src/: client_os.rs  credential.rs  error.rs  gateway.rs  hip_check.rs  lib.rs  params.rs  portal.rs  prelogin.rs  tunnel.rs  xml.rs
crates/gp-route/: Cargo.toml
crates/gp-route/src/: lib.rs
crates/gp-tunnel/: Cargo.toml  build.rs
crates/gp-tunnel/src/: lib.rs  openconnect.rs  openconnect_stub.rs
packaging/systemd/: README.md  openprotect@.service  pangolin@.service
scripts/: pangolin-vpnc-script.sh
