[workspace]
resolver = "2"
members = [
    "crates/gp-proto",
    "crates/gp-auth",
    "crates/gp-tunnel",
    "crates/gp-openconnect-sys",
    "crates/gp-hip",
    "crates/gp-dns",
    "crates/gp-route",
    "crates/gp-config",
    "crates/gp-ipc",
    "bins/pgn",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pangolin-vpn/pangolin"
homepage = "https://github.com/pangolin-vpn/pangolin"
authors = ["Pangolin Contributors"]

[workspace.dependencies]
# Internal crates.
#
# Each entry carries both `path = …` (cargo uses this to
# resolve the dep locally inside the workspace) AND
# `version = "0.1.0"` (cargo-deny's wildcard check is
# satisfied by any explicit version range, and pinning it
# to the workspace version keeps the declarations honest).
# Since every workspace member inherits its own
# `package.version` from `workspace.package.version`, the
# string here is literally the same source of truth.
gp-proto = { path = "crates/gp-proto", version = "0.1.0" }
gp-auth = { path = "crates/gp-auth", version = "0.1.0", default-features = false }
gp-tunnel = { path = "crates/gp-tunnel", version = "0.1.0" }
gp-openconnect-sys = { path = "crates/gp-openconnect-sys", version = "0.1.0" }
gp-hip = { path = "crates/gp-hip", version = "0.1.0" }
gp-dns = { path = "crates/gp-dns", version = "0.1.0" }
gp-route = { path = "crates/gp-route", version = "0.1.0" }
gp-config = { path = "crates/gp-config", version = "0.1.0" }
gp-ipc = { path = "crates/gp-ipc", version = "0.1.0" }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP / TLS
# Explicitly opt out of reqwest's `default-tls` (native-tls
# → openssl) feature — we only use rustls. Without
# `default-features = false` both TLS stacks end up compiled
# in, and cargo-deny's ban list rejects the openssl-sys +
# native-tls transitives.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "cookies",
    "blocking",
    "http2",
    "charset",
] }
rustls = "0.23"

# CLI
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Config
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# XML
quick-xml = { version = "0.36", features = ["serialize"] }

# Errors
anyhow = "1"
thiserror = "1"

# Async trait
async-trait = "0.1"

# Credentials
keyring = { version = "3", features = ["linux-native-sync-persistent"] }

# Directories
directories = "5"

# Build deps
bindgen = "0.70"
pkg-config = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
