[workspace]
resolver = "2"
# pgn-tray is excluded from default builds because it needs
# GTK3 + libappindicator on Linux. Build it explicitly with
# `cargo build -p pgn-tray`.
default-members = [
    "crates/gp-proto",
    "crates/gp-auth",
    "crates/gp-tunnel",
    "crates/gp-openconnect-sys",
    "crates/gp-hip",
    "crates/gp-dns",
    "crates/gp-route",
    "crates/gp-config",
    "crates/gp-ipc",
    "bins/pgn",
]
members = [
    "crates/gp-proto",
    "crates/gp-auth",
    "crates/gp-tunnel",
    "crates/gp-openconnect-sys",
    "crates/gp-hip",
    "crates/gp-dns",
    "crates/gp-route",
    "crates/gp-config",
    "crates/gp-ipc",
    "bins/pgn",
    "bins/pgn-tray",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pangolin-vpn/pangolin"
homepage = "https://github.com/pangolin-vpn/pangolin"
authors = ["Pangolin Contributors"]

[workspace.dependencies]
# Internal crates.
#
# Each entry carries both `path = …` (cargo uses this to
# resolve the dep locally inside the workspace) AND
# `version = "0.1.0"` (cargo-deny's wildcard check is
# satisfied by any explicit version range; without a
# version, path deps are treated as `*` which trips
# `bans.wildcards = "deny"` on a public workspace).
#
# **IMPORTANT: keep `version = "0.1.0"` in sync with
# `workspace.package.version` above.** Cargo does NOT
# enforce that `workspace.dependencies.<crate>.version`
# matches `workspace.package.version` for path deps —
# the field here is a plain string, not a resolve. If
# you bump `workspace.package.version` to e.g. "0.2.0",
# every one of the nine entries below has to change at
# the same time, or the next `cargo deny check` will
# start flagging the mismatch as a wildcard.
gp-proto = { path = "crates/gp-proto", version = "0.1.0" }
gp-auth = { path = "crates/gp-auth", version = "0.1.0", default-features = false }
gp-tunnel = { path = "crates/gp-tunnel", version = "0.1.0" }
gp-openconnect-sys = { path = "crates/gp-openconnect-sys", version = "0.1.0" }
gp-hip = { path = "crates/gp-hip", version = "0.1.0" }
gp-dns = { path = "crates/gp-dns", version = "0.1.0" }
gp-route = { path = "crates/gp-route", version = "0.1.0" }
gp-config = { path = "crates/gp-config", version = "0.1.0" }
gp-ipc = { path = "crates/gp-ipc", version = "0.1.0" }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP / TLS
# Explicitly opt out of reqwest's `default-tls` (native-tls
# → openssl) feature — we only use rustls. Without
# `default-features = false` both TLS stacks end up compiled
# in, and cargo-deny's ban list rejects the openssl-sys +
# native-tls transitives.
#
# The feature list below reconstructs the subset of
# reqwest 0.12's `default` we actually rely on, minus
# `default-tls` (replaced by `rustls-tls`) and minus
# `macos-system-configuration` (Linux-only project):
#
#   * `rustls-tls` — TLS backend
#   * `json`       — `.json()` body helper on requests/responses
#   * `cookies`    — cookie jar for the portal login flow
#   * `blocking`   — sync client used by gp-auth's HTTP calls
#   * `http2`      — HTTP/2 support (some portals negotiate it)
#   * `charset`    — charset decoding for non-UTF-8 HTTP bodies
#   * `system-proxy` — honour `http_proxy` / `https_proxy` /
#                     `no_proxy` environment variables. Without
#                     this, users who reach their VPN portal
#                     only through a corporate HTTP proxy would
#                     silently bypass it. Matches reqwest
#                     default behaviour that we would otherwise
#                     silently drop.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "cookies",
    "blocking",
    "http2",
    "charset",
    "system-proxy",
] }
rustls = "0.23"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Config
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# XML
quick-xml = { version = "0.39", features = ["serialize"] }

# Errors
anyhow = "1"
thiserror = "1"

# Async trait
async-trait = "0.1"

# Credentials
keyring = { version = "3", features = ["linux-native-sync-persistent"] }

# Directories
directories = "5"

# Build deps
bindgen = "0.70"
pkg-config = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
