[package]
name = "pgn-auth-helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Optional SAML WebView helper process for pgn"

[[bin]]
name = "pgn-auth-helper"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
