[package]
name = "pgn-tray"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0 OR MIT"
description = "Pangolin system tray app — minimal GUI for pgn connect/disconnect/status"

[[bin]]
name = "pgn-tray"
path = "src/main.rs"

[dependencies]
tray-icon = "0.19"
tao = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
