[package]
name = "pgn"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pangolin — GlobalProtect VPN CLI client"

[[bin]]
name = "pgn"
path = "src/main.rs"

[dependencies]
gp-proto = { workspace = true }
gp-auth = { workspace = true }
gp-tunnel = { workspace = true }
gp-config = { workspace = true }
gp-hip = { workspace = true }
gp-dns = { workspace = true }
gp-route = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
console = { workspace = true }
