[package]
name = "gp-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Authentication engine and providers for GlobalProtect"

[features]
default = ["saml-webview"]
saml-webview = ["dep:gtk", "dep:webkit2gtk", "dep:glib", "dep:soup3"]

[dependencies]
gp-proto = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
dialoguer = { workspace = true }
base64 = "0.22"
libc = "0.2"
md5 = "0.7"
serde_urlencoded = "0.7"

# SAML WebView (Linux-only, feature-gated)
gtk = { version = "0.18", optional = true }
webkit2gtk = { version = "2.0", optional = true, features = ["v2_40"] }
glib = { version = "0.18", optional = true }
soup3 = { version = "0.5", optional = true }
