[package]
name = "gp-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Authentication engine and providers for GlobalProtect"

[dependencies]
gp-proto = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
dialoguer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"
libc = "0.2"
md5 = "0.8"
serde_urlencoded = "0.7"
