[package]
name = "gp-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OpenProtect configuration file and credential store"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
directories = { workspace = true }
keyring = { workspace = true }
thiserror = { workspace = true }
